cluster/apps/external/vcenter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcenter
  namespace: external
spec:
  type: ExternalName
  externalName: 10.10.10.30
  ports:
    - port: 80
